--- a/src/app/views/pages/dashboard/dashboard.component.html
+++ b/src/app/views/pages/dashboard/dashboard.component.html
@@ -230,7 +230,7 @@
           </tbody>
         </table>
         <div class="pagination mt-4">
-          <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          <pagination-controls (pageChange)="$event"></pagination-controls>
         </div>
       </div>
     </div>
@@ -280,7 +280,7 @@
           </tbody>
         </table>
         <div class="pagination mt-4">
-          <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          <pagination-controls (pageChange)="$event"></pagination-controls>
         </div>
       </div>
     </div>
@@ -335,7 +335,7 @@
           </tbody>
         </table>
         <div class="pagination mt-4">
-          <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          <pagination-controls (pageChange)="$event"></pagination-controls>
         </div>
       </div>
     </div>
@@ -383,7 +383,7 @@
           </tbody>
         </table>
         <div class="pagination mt-4">
-          <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          <pagination-controls (pageChange)="$event"></pagination-controls>
         </div>
       </div>
     </div>
@@ -431,7 +431,7 @@
           </tbody>
         </table>
         <div class="pagination mt-4">
-          <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          <pagination-controls (pageChange)="$event"></pagination-controls>
         </div>
       </div>
     </div>
@@ -479,7 +479,7 @@
           </tbody>
         </table>
         <div class="pagination mt-4">
-          <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          <pagination-controls (pageChange)="$event"></pagination-controls>
         </div>
       </div>
     </div>
@@ -525,7 +525,7 @@
           </tbody>
         </table>
         <div class="pagination mt-4">
-          <pagination-controls (pageChange)="p = $event"></pagination-controls>
+          <pagination-controls (pageChange)="$event"></pagination-controls>
         </div>
       </div>
     </div>
