--- a/src/app/views/pages/leave-lead/leave-lead.component.html
+++ b/src/app/views/pages/leave-lead/leave-lead.component.html
@@ -55,7 +55,7 @@
                 <th>Action</th>
               </tr>
             </thead>
-            <tbody class="text-center">
+            <!-- <tbody class="text-center">
               <tr *ngFor="let lev of officeNewLeaves | search: [myStatus.value , leaveType.value , myDate.value ,myEndDate.value]:['status','leaveType','startDate','endDate'] | paginate: { itemsPerPage: 4, currentPage: p } ;let i=index">
                 <td>{{i+1}}</td>
                 <td>
@@ -79,10 +79,10 @@
                   </button>
                   </td> 
               </tr>
-            </tbody>
+            </tbody> -->
           </table>
           <div class="pagination mt-4">
-            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+            <pagination-controls (pageChange)="$event"></pagination-controls>
           </div>
         </div>
       </div>
