--- a/src/app/views/pages/leave-received/leave-received.component.html
+++ b/src/app/views/pages/leave-received/leave-received.component.html
@@ -11,7 +11,7 @@
       <div class="card-body">
         <h6 class="card-title" style="color:#727cf5;">Recieved Leaves</h6>
         <p class="card-description" style="color: black;">Mark the leaves</p>
-          <div class="text-right">
+          <!-- <div class="text-right">
             <zxing-scanner style="width: 40%;" (scanSuccess)="onCodeResult($event)"></zxing-scanner>
             <section class="results" *ngIf="qrResultString">
               <div>
@@ -20,8 +20,8 @@
               </div>
               <button (click)="clearResult()">&times;</button>
             </section>
-            <!-- <button type="button" class="btn btn-primary btn-custom" >Scan by QR</button> -->
-          </div>
+             <button type="button" class="btn btn-primary btn-custom" >Scan by QR</button> 
+          </div> -->
         <div class="table-responsive pt-3">
           <table class="table table-bordered">
             <thead>
