--- a/src/app/views/pages/offices/add-office/add-office.component.html
+++ b/src/app/views/pages/offices/add-office/add-office.component.html
@@ -91,12 +91,12 @@
           <div class="row mt-3">
             <div class="col-sm-4">
               <div class="form-group">
-          <input type="text" [(ngModel)]="latitude" class="form-control" placeholder="latitude" formControlName="lat" disabled>
+          <input type="text" [(ngModel)]="latitude" class="form-control" placeholder="latitude" formControlName="lat">
           <!-- <p class="text-danger mt-1" *ngIf="latitude > 1" >please enter a valid value</p>  -->
         </div></div>
           <div class="col-sm-4">
             <div class="form-group">
-          <input type="text" [(ngModel)]="longitude" placeholder="longitude" class="form-control"  formControlName="lng" disabled>
+          <input type="text" [(ngModel)]="longitude" placeholder="longitude" class="form-control"  formControlName="lng">
            <!-- <p class="text-danger mt-1" *ngIf="longitude > 0" >please enter a valid value</p>  -->
 
         </div></div>
