--- a/src/app/views/pages/office-employees/employee-list/employee-list.component.html
+++ b/src/app/views/pages/office-employees/employee-list/employee-list.component.html
@@ -53,7 +53,7 @@
                 <th>View More</th>
               </tr>
             </thead>
-            <tbody class="text-center">
+            <!-- <tbody class="text-center">
               <tr *ngFor="let emp of employees | paginate: { itemsPerPage: 4, currentPage: p } ;let i=index">
                 <td>{{i+1}}</td>
                 <td>{{emp.fName}}{{emp.lName}}</td>
@@ -69,10 +69,10 @@
               </tr>
 
               
-            </tbody>
+            </tbody> -->
           </table>
           <div class="pagination mt-4">
-            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+            <pagination-controls (pageChange)="$event"></pagination-controls>
           </div>
         </div>
       </div>
