--- a/src/app/views/pages/office-employees/verify-account/verify-account.component.html
+++ b/src/app/views/pages/office-employees/verify-account/verify-account.component.html
@@ -13,19 +13,19 @@
             <!-- <h5 class="text-muted font-weight-normal mb-4">Reset password</h5> -->
 
             <ng-container *ngIf="loading">
-              <i-feather name="loader" class="loading"></i-feather>
+              <i data-feather="loader" class="loading"></i>
               <h5 class="text-muted mt-3">Verifying...</h5>
             </ng-container>
 
             <ng-container *ngIf="invalidLink && !loading">
-              <i-feather name="alert-triangle" class="xl-icon"></i-feather>
+              <i data-feather="alert-triangle" class="xl-icon"></i>
               <h5 class="text-muted mt-2">Failed!</h5>
               <p class="text-muted mt-1">The link is invalid or expired.</p>
               <a routerLink="/auth/forgot-password" class="d-block mt-2 text-muted">Request New Link</a>
             </ng-container>
 
             <ng-container *ngIf="!invalidLink && !loading">
-              <i-feather name="check" style="color: green;" class="xl-icon"></i-feather>
+              <i data-feather="check" style="color: green;" class="xl-icon"></i>
               <h5 class="text-muted mt-2">Success!</h5>
               <p class="text-muted mt-1">Account verified successfully!</p>
             </ng-container>
